--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "argon2": "^0.28.5",
@@ -32,6 +33,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.6.0",
     "typeorm": "^0.2.45",
-    "typescript": "^4.5.9"
+    "typescript": "^4.5.9",
+    "uuid": "^8.3.2"
   }
 }
